# hx711py

./: emulated_hx711.py  example.py  hx711.py  setup.cfg
src/hx711py/: hx711.py
