[metadata]
name = hx711py
version = 0.0.1
author = Lorenzo Marroccoli
author_email = lollo0296@gmail.com
description = Python package to interact with an HX711 ADC on a RaspberryPi via its GPIOs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lollo0296/hx711py
project_urls =
    Bug Tracker = https://github.com/lollo0296/hx711py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    RPi.GPIO
    numpy

[options.packages.find]
where = src